test/pass/dynaload/no_clash.lly
define concat(a: String, b: String) {  }

var s = "".concat("")
