test/fail/classes/class_nesting.lly
#[
SyntaxError: Cannot define a class here.
Where: File "class_nesting.lly" at line 7
]#

class c1(a: integer) {
    class c2(b: integer) {

    }
}
